# zero2prod-newsletter

./: Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
migrations/: 20240620031901_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
